# Dying-Light-ReAnimated

./: .gitattributes  .gitignore  DL-ReAnimated.spec  PACKAGE_MANIFEST.json  README.md  START_HERE.txt  build_exe.bat  build_exe.ps1  common_anims_sp_pc.rpack  common_anims_sp_pc.rpack.dlrmanifest.json  dl_reanimated_gui.py  pyproject.toml  repair_gui.bat  requirements-build.txt  requirements.txt  run_gui.bat  run_gui.ps1  run_gui.sh  setup_gui.bat
dlanm2_gui/: __init__.py  __main__.py  animation_scr.py  animation_targets.py  anm2.py  anm2_base_segment.py  anm2_components.py  anm2_fbx.py  anm2_packed.py  anm2_provenance.py  anm2_writer.py  automatic_retarget.py  background_tasks.py  blender_fbx.py  blender_mirror_wrapper.py  bone_maps.py  chrome_rig.py  chrome_rig_builder.py  chrome_rig_registry.py  dl2_anm2.py  environment_check.py  fbx_anm2_export_behavior.py  fbx_blendshapes.py  fbx_core.py  fbx_pipeline.py  fbx_preflight.py  game_profiles.py  gui.py  helper_profiles.py  helper_retarget.py  locomotion.py  mimic_builder.py  mimic_gui.py  mimic_profiles.py  mimic_project_builder.py  models.py  pack_manifest.py  paths.py  project_builder.py  project_paths.py  (+25 more)
docs/: ANIMATION_SCRIPT_TARGETS.md  ANM2_FORMAT.md  ANM2_TO_FBX.md  BUILDING_WINDOWS_EXE.md  CHROME_RIGS.md  CUSTOM_MODEL_RIG_CONTRACT.md  DEVELOPER_ARCHITECTURE.md  DYING_LIGHT_2.md  FACIAL_ANIMATIONS.md  FBX_PREFLIGHT.md  GUI_GUIDE.md  MIMIC_PROFILES.md  MODEL_IMPORT.md  PROJECT_FORMAT.md  README.md  RETARGETING.md  ROOT_MOTION_AND_IK.md  RPACK_WORKFLOW.md  TROUBLESHOOTING.md
examples/: README.md  (+6 more)
(+156 files in other folders)
