[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dl-reanimated"
version = "0.5.1"
description = "Mixamo FBX retargeting and ANM2/RPack authoring for Dying Light."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
gui = ["PySide6>=6.7"]
build = ["PyInstaller>=6.8"]

[project.scripts]
dlanm2-fbx-to-rpack = "dlanm2_gui.tools.fbx_to_rpack:main"
dlanm2-project-build = "dlanm2_gui.tools.project_build:main"
dlanm2-gui = "dlanm2_gui.gui:main"
dlanm2-anm2-to-fbx = "dlanm2_gui.tools.anm2_to_fbx:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dlanm2_gui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
